--- a/smcmphlp.ini
+++ b/smcmphlp.ini
@@ -5,7 +5,7 @@ Compilator="spcomp.exe"
 Parameters=
 
 ;TODO:make descriptipn
-Include=..\smk64t.sourcemod\scripting\include;..\smk64t.sourcemod\smlib\scripting\include;
+Include=..\smk64t.sourcemod\game\addons\sourcemod\scripting\include;
 ;..\smk64t\sourcemod-1.7.3-git5301\include;..\smk64t\smlib\scripting\include;
 
 ;Default included:
@@ -24,20 +24,40 @@ Compilator_Folder=..\sourcemod-1.10.0-git6502-windows\addons\sourcemod\scripting
 Plugin_Author="k64t34"
 
 ; Параметры для отладки плагина на сервере
-[Server]
-rcon_address=192.168.56.102
-rcon_port=27015
-rcon_password="JA2PI"
+;[Server]
+;rcon_address=192.168.56.102
+;rcon_port=27015
+;rcon_password="JA2PI"
 ; Путь куда копировать скомпилированный плагин по протоколу SMB. Путь в формати URI. Это может быть локальный диск или  удаленный сервер
 ;path to folder in LAN or
 ;SRCDS_Folder=\\server1\c$\srcds\game\addons\sourcemod\plugin
 ;SRCDS_Folder=D:\Users\Andrew\Project\srcds.dod.2021\dod
-SRCDS_Folder=\\192.168.56.102\tmp\srcds.dod.2021\dod
-SRCDS_Folder_user=dod
-SRCDS_Folder_password=12345678
+;SRCDS_Folder=\\192.168.56.102\tmp\srcds.dod.2021\dod
+;SRCDS_Folder_user=dod
+;SRCDS_Folder_password=12345678
 ; Путь куда копировать скомпилированный плагин по протоколу FTP. Путь в формати URL.
-SRCDS_FTP=ftp://server/game/addons/sourcemod/plugin
+;SRCDS_FTP=ftp://server/game/addons/sourcemod/plugin
 ;Перезапусить srcds перед отладкой новой скомпилированной версии плугина
-RestartServer=False
+;RestartServer=False
 ;Перезапусить карту на srcds  перед отладкой новой скомпилированной версии плугина
-RestartMap=No
+;RestartMap=No
+
+
+
+
+
+
+
+
+
+[Server]
+;IP address or domain name.
+Hostname=deploy2
+Share=c$
+Share_User=dod
+Share_Password=12345678
+SRCDS_Folder=\Program Files\srcds.dod.2021\dod\
+
+
+rcon_port=27015
+rcon_password="JA2PI"
